building the index

--- a/index.html
+++ b/index.html
@@ -4,19 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <header>
+    <header class="site-header">
         <h1>The Fashion Pet</h1>
-        <nav>
+        <nav class="nav-bar">
             <a href="index.html">Home</a>
             <a href="services.html">Services</a>
             <a href="register.html">Register</a>
         </nav>
     </header>
     <main>
-        <h2>Welcome ...</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ut optio quas, dolorum laudantium tempora porro minus aspernatur est doloribus quia impedit architecto vitae eligendi deleniti culpa, aliquid, officia blanditiis!</p>
+        <div class="flex-container">
+            <div>
+                <h2>Daily Dog Walking</h2>
+                <a href="index.html" class="btn btn-read">Learn More</a>
+            </div>
+            <div>
+                <h2>Vacation Care</h2>
+                <a href="index.html" class="btn btn-read">Learn More</a>
+            </div>
+            <div>
+                <h2>Overnight Care</h2>
+                <a href="index.html" class="btn btn-read">Learn More</a>
+            </div>
+        </div>
+        <div class="flex-container">
+            <div class="about-container">
+                <h1>About</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, veritatis modi voluptas dolor corporis earum? Possimus aut porro beatae cumque eveniet labore perferendis, reiciendis nisi, doloremque facere fuga, in delectus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos non repellendus quam, dicta sed, sit quia doloremque ratione molestiae inventore nam eveniet? Sequi quis inventore veniam quae. Facere, adipisci molestias! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias deserunt praesentium iusto molestias recusandae officia ipsam, cumque consectetur veritatis. Recusandae perferendis possimus beatae culpa nobis qui officia tempora quas minus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas perferendis nemo quibusdam optio amet, fugit, adipisci unde reprehenderit voluptates corporis suscipit rerum aliquam odit, in ab dignissimos maxime aut porro! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid illum obcaecati nemo quisquam blanditiis dolore incidunt. Facilis corrupti porro sint at atque culpa qui assumenda animi. Minus dolor culpa odio?</p>
+                <a href="index.html" class="btn btn-read">Read More</a>
+            </div>
+            <div class="img-container">
+                <img src="/img/Bella_Heidi_Rini_Armstrong.jpg" alt="">
+            </div>
+        </div>
     </main>
 </body>
 </html>
