--- a/register.html
+++ b/register.html
@@ -17,7 +17,9 @@
     <main>
         <h2>Register a new pet</h2>
     </main>
-
+    <p id="petcounter"></p>
+    <h3>The list of our pets</h3>
+    <ul id="list"></ul>
     <script src="./scripts/register.js"></script>
 </body>
 </html>
