--- a/index.html
+++ b/index.html
@@ -3,43 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="/styles/bootstrap.css">
+
 </head>
 <body>
-    <header class="site-header">
-        <h1>The Fashion Pet</h1>
-        <nav class="nav-bar">
-            <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="register.html">Register</a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-gradient">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">The Fashion Pet</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" href="/index.html">Home</a>
+                <a class="nav-link" href="/services.html">Services</a>
+                <a class="nav-link" href="/register.html">Register</a>
+            </div>
+            </div>
+            </div>
         </nav>
+        <div div class="my-auto p-5"> 
+            <h1 class="container text-center">About us</h1>
+        </div>
     </header>
     <main>
-        <div class="flex-container">
-            <div>
-                <h2>Daily Dog Walking</h2>
-                <a href="index.html" class="btn btn-read">Learn More</a>
-            </div>
-            <div>
-                <h2>Vacation Care</h2>
-                <a href="index.html" class="btn btn-read">Learn More</a>
-            </div>
-            <div>
-                <h2>Overnight Care</h2>
-                <a href="index.html" class="btn btn-read">Learn More</a>
+        <div class="container text-center">
+            <div class="row justify-content-around">
+                <div class="col-4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam natus illum eos maiores tempora ipsam consequuntur quas, magni, expedita quia reprehenderit in eius a non quod. Quidem distinctio fuga laborum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex ad qui libero ipsam rerum deserunt quidem necessitatibus mollitia asperiores officia vel explicabo nostrum ut magnam neque nisi, esse aliquam voluptatum! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo consequuntur expedita fugiat optio iusto quidem quae voluptatum magnam, aut voluptas beatae architecto! Non error vitae culpa quos temporibus at! Assumenda! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium rerum saepe necessitatibus cupiditate vel sapiente ut, fuga obcaecati labore ipsam. Maxime provident nihil obcaecati id, minima quisquam consectetur voluptas eveniet.</p>
+                </div>
+                <div class="col-4">
+                    <img src="img/Bella_Heidi_Rini_Armstrong.jpg" alt="">
+                </div>
             </div>
         </div>
-        <div class="flex-container">
-            <div class="about-container">
-                <h1>About</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, veritatis modi voluptas dolor corporis earum? Possimus aut porro beatae cumque eveniet labore perferendis, reiciendis nisi, doloremque facere fuga, in delectus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos non repellendus quam, dicta sed, sit quia doloremque ratione molestiae inventore nam eveniet? Sequi quis inventore veniam quae. Facere, adipisci molestias! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias deserunt praesentium iusto molestias recusandae officia ipsam, cumque consectetur veritatis. Recusandae perferendis possimus beatae culpa nobis qui officia tempora quas minus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas perferendis nemo quibusdam optio amet, fugit, adipisci unde reprehenderit voluptates corporis suscipit rerum aliquam odit, in ab dignissimos maxime aut porro! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid illum obcaecati nemo quisquam blanditiis dolore incidunt. Facilis corrupti porro sint at atque culpa qui assumenda animi. Minus dolor culpa odio?</p>
-                <a href="index.html" class="btn btn-read">Read More</a>
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="my-auto p-5">
+                    <h1>What we offer</h1>
+                </div>
+                <div class="col">
+                    <h2>Daily Dog Walking</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laborum quod aliquam, doloribus molestias ut ipsum qui nihil tempora, obcaecati sunt asperiores sequi porro saepe iure minima, sed deserunt a?</p>
+                    <a href="services.html" class="btn btn-primary">Learn More</a>
+                </div>
+                <div class="col">
+                    <h2>Vacation Care</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eveniet deserunt hic rem maxime repudiandae, similique provident explicabo, id pariatur ad non accusamus tenetur veniam. Aspernatur aliquid hic cum officiis!</p>
+                    <a href="services.html" class="btn btn-primary">Learn More</a>
+                </div>
+                <div class="col">
+                    <h2>Overnight Care</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam voluptates aperiam alias ad voluptatibus nesciunt sequi molestias natus provident et dolores consectetur ratione ducimus quo nemo dolorum, cum dolorem!</p>
+                    <a href="services.html" class="btn btn-primary">Learn More</a>
+                </div>
             </div>
-            <div class="img-container">
-                <img src="/img/Bella_Heidi_Rini_Armstrong.jpg" alt="">
-            </div>
-        </div>
+        </div>    
     </main>
 </body>
 </html>
