--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             </div>
         </nav>
-        <div div class="my-auto p-5"> 
+        <div class="my-auto p-5"> 
             <h1 class="container text-center">About us</h1>
         </div>
     </header>
@@ -48,17 +48,17 @@
                 <div class="col">
                     <h2>Daily Dog Walking</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laborum quod aliquam, doloribus molestias ut ipsum qui nihil tempora, obcaecati sunt asperiores sequi porro saepe iure minima, sed deserunt a?</p>
-                    <a href="services.html" class="btn btn-primary">Learn More</a>
                 </div>
                 <div class="col">
                     <h2>Vacation Care</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eveniet deserunt hic rem maxime repudiandae, similique provident explicabo, id pariatur ad non accusamus tenetur veniam. Aspernatur aliquid hic cum officiis!</p>
-                    <a href="services.html" class="btn btn-primary">Learn More</a>
                 </div>
                 <div class="col">
                     <h2>Overnight Care</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam voluptates aperiam alias ad voluptatibus nesciunt sequi molestias natus provident et dolores consectetur ratione ducimus quo nemo dolorum, cum dolorem!</p>
-                    <a href="services.html" class="btn btn-primary">Learn More</a>
+                </div>
+                <div class="my-auto p-5">
+                    <a class="btn btn-primary" href="/services.html">Register here</a>
                 </div>
             </div>
         </div>    
