--- a/register.html
+++ b/register.html
@@ -24,6 +24,9 @@
             </div>
             </div>
         </nav>
+        <div class="my-auto p-5"> 
+            <h1 class="container text-center">Register</h1>
+        </div>
     </header>
     <main class="container mt-4">
         <h2>Register a new pet</h2>
