--- a/services.html
+++ b/services.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/bootstrap.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Services</h1>
-
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark bg-gradient">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">The Fashion Pet</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" href="/index.html">Home</a>
+                <a class="nav-link" href="/services.html">Services</a>
+                <a class="nav-link" href="/register.html">Register</a>
+            </div>
+            </div>
+            </div>
+        </nav>
+        <div class="my-auto p-5">
+            <h1 class="container text-center">Services</h1>
+        </div>
+    </header>
     <main class="container">
         <h2>Register a new service</h2>
         <div class="container">
